# quadric-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile  study.cpp  study1.cpp
algo/: perlin.py
demos/: giffy.sh  instagramify.sh
doc/: Feature Documentation.odt  How-to for real-time smooth lighting.odt  Information.odt  singleton.h
docs/: Attenuation Coefficients.ods  library_examples.cpp
geometry/: eclipsia.blend
inc/: api.cpp  api.h  api.hpp  buffer.cpp  buffer.h  buffer.hpp  camera.cpp  camera.h  camera.hpp  common.h  common.hpp  draw.h  draw.hpp  error.hpp  geometry.h  geometry.hpp  geometry2D.h  geometry3D.h  geometry3D.hpp  light.h  light.hpp  math.h  math.hpp  opengl.h  opengl.hpp  print.h  raw.h  raw.hpp  recorder.hpp  scene.cpp  scene.hpp  shader.h  shader.hpp  thing.cpp  thing.h  thing.hpp  tiktok.h  tiktok.hpp  time.h  time.hpp  (+1 more)
include/: camera.h  common.h  geometry.h  geometry1D.h  geometry3D.h  light.h  opengl.h  video.h
include/glad/: glad.h
lib/glad/: glad.c
qe/: api.cpp  camera.cpp  camera.hpp  draw.hpp  eclipsia2.hpp  error.hpp  geometry.hpp  geometry2D.hpp  geometry3D.hpp  light.hpp  math.cpp  math.hpp  print.cpp  print.hpp  scene.cpp  scene.hpp  shader.hpp
shaders/: common.frag  common.vert  common_noise.vert  effects_perlin.vert  effects_tube.vert  effects_wave.vert  lighting.frag  lighting.vert  std.frag  std.vert  std_normal.vert  study41.frag  study41.vert
src/: main.cpp  study.cpp  test_cube.cpp
tests/: a.out  class_objects.cpp  dynamic_for.cpp  glm_length.cpp  glm_mat.cpp  linear_int.cpp  perlin_test.cpp  regex_test.cpp  spline_test.cpp  string_test.cpp  vector_erase.cpp
vid/: instagramify.sh
